# tap-asana

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_asana/: streams.py  tap.py
tap_asana/tests/: __init__.py  test_core.py
